# geovox

./: .gitignore  LICENSE  Makefile  README.md  assembly_1.vtk  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.py.backup
.deskUbuVenv/: pyvenv.cfg
.macDebVenv/: pyvenv.cfg
c_geovox/: Makefile
c_geovox/include/: box.hpp  geometry.hpp  geometry_module.hpp  mesh_module.hpp  point.hpp  quaternion.hpp  solvers_module.hpp  util.hpp  util_module.hpp
c_geovox/src/: box.cpp  point.cpp  quaternion.cpp
c_geovox/tests/: Makefile  particles_1.txt  test  test_util.cpp
geovox/: __init__ .pxd  assembly.pdx  assembly.pxd  assembly.pyx  octree.pxd  octree.pyx  optimize.pxd  optimize.pyx  particles.pxd  particles.pyx  utilities.pxd  utilities.pyx  utility.pxd  utility.pyx  vtkutil.cpp  vtkutil.pxd  vtkutil.pyx
geovox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
geovox/geometry/: __init__.py  assembly.cpp  assembly.pxd  assembly.pyx  particles.cpp  particles.pxd  particles.pyx
geovox/linalg/: __init__.py  matrix.cpp  matrix.pxd  matrix.pyx  solvers.cpp  solvers.pxd  solvers.pyx  vector (copy).pxd  vector.cpp  vector.pxd  vector.pyx
geovox/util/: __init__.py  box.cpp  box.pxd  box.pyx  optimize.cpp  optimize.pxd  optimize.pyx  point.pxd  point.pyx  quaternion.cpp  quaternion.pxd  quaternion.pyx
geovox/utilities/: __init__.py  box.pxd  box.pyx  matrix.pxd  (+11 more)
include/: geometry.hpp
lib/: __init__.py  particles.pyx  utility.pyx
tests/: assembly.py  assembly_1.py  box.py  node.py  optimize.py  particles.py  quaternion.py  vector.py  vector3.py
(+58 files in other folders)
