[metadata]
name = geovox
version = 0.1
author = Zachary Hilliard
author_email = 
description = A collection of tools for discretizing 3D space, primarily using voxels and similar elements recognized by .vtk readers. The initial purpose was to discretize assemblies of particles coming from DEM simulations.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
url = https://github.com/zachhill222/geovox
#project_urls =
#    Documentation   = https://github.com/jakelevi1996/jutility
#    Source Code     = https://github.com/jakelevi1996/jutility
#    Bug Tracker     = https://github.com/jakelevi1996/jutility/issues

[options]
python_requires = >=3.11
install_requires =
    numpy>=2.1.0
    scipy>=1.14.1
    cython>= 3.0.11
